# garmon

./: .gitignore  ChangeLog  INSTALL  README  TODO.tasks  acinclude.m4  aclocal.m4  babel.cfg  config.h.in  configure.ac  garmon.anjuta  garmon.pidaproject  setup.cfg  setup.py
data/: Makefile.am  device_prefs.ui  garmon.desktop.in.in  garmon.schemas  general_prefs.ui  goss.gaphor  prefs.glade  prefs.ui
garmon/: Makefile.am  __init__.py  application.py  backdoor.py  command_queue.py  defs.py.in  device.py  garmon  garmon.in  garmon_app.py  gpl.py  logger.py  obd_device.py  plugin.py  plugin_manager.py  preferences.py  prefs.py  property_object.py  pyconsole.py  scheduler.py  sensor.py  trouble_codes.py  utils.py  widgets.py
garmon/data/: device_prefs.ui
garmon/garmon/: obd_device.py  property_object.py  trouble_codes.py
garmon/locale/: garmon.pot
garmon/locale/ru/LC_MESSAGES/: garmon.po
garmon/plugins/dashboard/: dashboard.dia  dashboard.py  dashboard.ui
garmon/plugins/dtc_clearer/: Makefile.am  dtc_clearer.py
garmon/plugins/dtc_reader/: dtc_reader.glade  dtc_reader.py  dtc_reader.ui
garmon/plugins/freeze_frame_data/: freeze_frame_data.py  freeze_frame_data.ui
garmon/plugins/live_data/: live_data.py
plugins/: Makefile.am
plugins/dashboard/: Makefile.am  dashboard.glade  dashboard.py  dashboard.ui
plugins/dashboard/themes/default/: Makefile.am
plugins/dashboardcairo/: Makefile.am  dashboard.ui  dashboardcairo.py
plugins/dashboardcairo/themes/default/: Makefile.am
plugins/dtc_clearer/: dtc_clearer.py
plugins/dtc_reader/: Makefile.am  dtc_reader.glade  dtc_reader.py  dtc_reader.ui
plugins/freeze_frame_data/: Makefile.am  freeze_frame_data.glade  freeze_frame_data.py  freeze_frame_data.ui
plugins/live_data/: Makefile.am  live_data.glade  live_data.py  live_data.ui
plugins/o2_sensors/: Makefile.am  o2_sensors.glade  o2_sensors.py
plugins/sensor_list/: Makefile.am  sensor_list.py
po/: ChangeLog  LINGUAS  POTFILES.in  es.po  garmon.pot  nl.po
scripts/: elm_sim.py  garmon
