## Process this file with automake to produce Makefile.in
## Created by Anjuta

## The main script
## Directory where .class files will be installed
garmondir = $(pythondir)/garmon

garmon_PYTHON = \
	prefs.py \
	plugin.py \
	plugin_manager.py \
	trouble_codes.py \
	pyconsole.py \
	backdoor.py \
	sensor.py \
	property_object.py \
	scheduler.py \
	widgets.py \
	obd_device.py \
	__init__.py \
	garmon_app.py \
	defs.py

bin_SCRIPTS=garmon

EXTRA_DIST = $(bin_SCRIPTS)
