defaultthemedir = $(PLUGINDIR)/dashboard/themes/default

defaulttheme_DATA =	    \
	    backplate.svg	    \
	    backplate-shadow.svg		    \
	    centric-needle.svg		    \
	    centric-needle-shadow.svg    \
	    excentric-needle.svg	    \
        glass.svg			\
        rim.svg

EXTRA_DIST = $(defaulttheme_DATA)
