defaultthemedir = $(dashboardcairodir)/themes/default

defaulttheme_DATA =	    \
	    backplate-shadow.svg	    \
	    backplate.svg		    \
	    rim.svg		    \
	    glass.svg		    \
	    needle-shadow.svg    \
	    centric-needle.svg	    \
        excentric-needle    \
        needle-shadow.svg

EXTRA_DIST = $(defaulttheme_DATA)
